# vigilant-crypto-snatch

./: .gitignore  .pre-commit-config.yaml  404.html  Buy order mechanism  Dockerfile  Evaluation for Qt GUI.ipynb  Evaluation.ipynb  README.md  changelog.html  configuration.html  db.sqlite  developing.html  docker-compose.yml  donation.html  import-graph.py  index.html  installation.html  license.html  make-release  mkdocs.yml  pyproject.toml  requirements.txt  running.html  sample_config.yml  sitemap.xml  support.html  trades.js  vigilant-crypto-snatch.py  vigilant_crypto_snatch.py  vigilant_crypto_snatch_eth.py
.github/: FUNDING.yml
changelog/: index.html
changelog/version-2/: index.html
changelog/version-3/: index.html
changelog/version-4/: index.html
changelog/version-5/: index.html
configuration/: index.html
configuration/general/: index.html
configuration/marketplace/: index.html
configuration/notifications/: index.html
configuration/telemetry/: index.html
configuration/triggers/: index.html
deployment/: index.html
dev/components/: index.html
dev/entities/: index.html
dev/graphs/: Makefile  architecture.dot  configuration.puml  core.puml  evaluation.puml  feargreed.puml  gui-config.puml  marketplace.puml  myrequests.puml  notifications.puml  paths.puml  qtgui-ui-main.puml  telegram.puml  triggers.puml  vigilant_crypto_snatch.puml
dev/use-cases/: index.html
developing/: index.html
docs/: changelog.md  configuration.md  deployment.md  developing.md  donation.md  evaluation.md  index.md  installation.md  license.md  running.md  support.md  usage.md
docs/.obsidian/: config  workspace
docs/changelog/: version-2.md  version-3.md  version-4.md  version-5.md
docs/configuration/: general.md  marketplace.md  notifications.md  telemetry.md  triggers.md
docs/dev/: components.md  use-cases.md
docs/gui/: start.md
docs/installation/: general.md  windows.md
docs/usage/: evaluate.md  general.md  gui.md  test-drive.md  watch.md
donation/: index.html
evaluation/: index.html
gui/start/: index.html
installation/: index.html
installation/general/: index.html
installation/windows/: index.html
license/: index.html
running/: index.html
search/: search_index.json
src/vigilant/: bitstamp_adaptor.py  logging.py  marketplace.py
src/vigilant_crypto_snatch/: __init__.py  bitstamp_adaptor.py  capture.py  cli.py  clikraken_adaptor_api.py  clikraken_adaptor_cli.py  configuration.py  core.py  datamodel.py  drop.py  evaluation.py  factory.py  greeting.py  historical.py  kraken_adaptor.py  logging.py  marketplace.py  marketplace_factory.py  migrations.py  rendering.py  streamlit_ui.py  telegram.py  testdrive.py  triggers.py  triggers_old.py  watchloop.py
support/: index.html
tests/: mock_historical.py  test_capture.py  test_checkin_trigger.py  test_drop_trigger.py  test_drop_trigger_with_percentage.py  test_failure_timeout.py  test_telegram.py  test_trigger.py  test_trigger_start.py  test_true_trigger.py
usage/: index.html
usage/evaluate/: index.html
usage/general/: index.html
usage/gui/: index.html
usage/test-drive/: index.html
usage/watch/: index.html
vigilant/: bitstamp_adaptor.py  capture.py  datamodel.py  drop.py  historical.py  kraken_adaptor.py  marketplace.py  telegram.py
vigilant_crypto_snatch/: __init__.py  cli.py  core.py  core_test.py  evaluation.py  myrequests.py  paths.py  streamlit_ui.py  test_core.py  test_streamlit_ui.py  test_watchloop.py  watchloop.py
vigilant_crypto_snatch/commands/: test_commands.py  testdrive.py  watch.py
(+156 files in other folders)
