[tool.poetry]
name = "vigilant-crypto-snatch"
version = "4.4.0"
description = "Crypto currency buying agent"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
vigilant-crypto-snatch = "vigilant_crypto_snatch.cli:main"

[tool.poetry.dependencies]
BitstampClient = "^2.2.8"
appdirs = "^1.4.4"
coloredlogs = "^15.0"
pandas = "^1.3.4"
python = "^3.7.1,<3.11"
pyyaml = "^6.0"
requests = "^2.25.1"
scipy = "^1.7.2"
sqlalchemy = "^1.4.27"
streamlit = "^1.2.0"
urllib3 = "^1.26.3"
altair = "^4.1.0"
krakenex = "^2.1.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mkdocs_material = "^7.0.5"
pytest = "^6.2.2"
coverage = "^6.1.2"
pre-commit = "^2.13.0"
mypy = "^0.910"
types-PyYAML = "^5.4.6"
types-requests = "^2.26.0"
types-python-dateutil = "^2.8.2"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
