[tool.poetry]
name = "vigilant-crypto-snatch"
version = "5.9.3"
description = "Crypto currency buying agent"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
vigilant-crypto-snatch = "vigilant_crypto_snatch.cli:main"
vigilant-crypto-snatch-qt = "vigilant_crypto_snatch.qtgui.__main__:main"

[tool.poetry.dependencies]
python = "^3.9,<3.13,!=3.9.7"
bitstampclient = "^2.2.10"
appdirs = "^1.4.4"
coloredlogs = "^15.0.1"
pyyaml = "^6.0"
requests = "^2.28.2"
sqlalchemy = "^2.0.9"
krakenex = "^2.1.0"
python-dateutil = "^2.8.2"
click = "^8.1.3"
ccxt = "^3.0.72"
pandas = "^1.0"
scipy = "^1.10.1"
streamlit = "^1.21.0"
altair = "^4.2.2"

PySide6 = { version = "^6.5.0", optional = true }

[tool.poetry.extras]
gui = ["PySide6"]

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mkdocs-material = "^9.1.6"
pytest = "^7.3.1"
coverage = "^7.2.3"
pre-commit = "^3.2.2"
mypy = "^1.2.0"
types-pyyaml = "^6.0.12.9"
types-requests = "^2.28.11.17"
types-python-dateutil = "^2.8.19.12"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
